syntax = "proto3";

package proto;

option go_package = "github.com/derpartizanen/metrics/proto";

message Metric {
  string id = 1;
  string type = 2;
  int64 delta = 3;
  double value = 4;
}

message UpdateRequest {
  Metric metric = 1;
}

message UpdateResponse {
}

message UpdatesRequest {
  repeated Metric metrics = 1;
}

message UpdatesResponse {
}

message ValueRequest {
  string id = 1;
  string metric_type = 2;
}

message ValueResponse {
  Metric metric = 1;
}

service MetricCollector {
  rpc Updates(UpdatesRequest) returns (UpdatesResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Value(ValueRequest) returns (ValueResponse);
}
